# portfolio-code

./: .gitignore  LICENSE  README.md  package-lock.json
backend/: .env  Cargo.toml
backend/src/: database.rs  main.rs  old_database.rs  temp_check_ip.rs
backend/src/assets/: index.html
backend/src/assets/assets/: index-8t0oWO53.css  index-LxzIW14-.js
backend/src/frontend_files/: index.html
backend/src/frontend_files/assets/: index-CAL5OSWt.js  index-Dz419-SS.css
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.jsx  app.tsx
client/src/components/: Cards.tsx  Navbar.tsx  Profileinfo.tsx  Projectpage.tsx  navbar.jsx
client/src/frontend/: App.tsx  Navbar.tsx
client/src/frontend/main/: Mainpage.tsx  Profileinfo.tsx
client/src/frontend/projects/: Cards.tsx  Cards_page.tsx  Projectpage.tsx  cardjson.json
server/: package-lock.json  package.json  server.ts
