[package]
name = "backend"
version = "0.1.0"
edition = "2024"
exclude = ["config/*"]


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = "0.6.20"
fs = "0.0.5"
indexmap = "2.9.0"
mysql = "26.0.0"
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
toml_edit = "0.22.24"


