[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
axum-reverse-proxy = "0.8.0"
fs = "0.0.5"
mysql = "26.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tower-http =  { version = "0.6.4", features = ["fs"] }

