[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
axum-extra = "0.10.1"
fs = "0.0.5"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",      # enable the Tokio async runtime
    "mysql",              # enable the MySQL/MariaDB driver
    "macros"              # enable the compile-time-checked query! macros
] }
tokio = { version = "1", features = ["full"] }
tower-http =  { version = "0.6.4", features = ["fs"] }

